--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,12 @@ body {
   font-size: 100px;
   font-family: 'Nanum Gothic', sans-serif;
 }
+
+/* ICONS */
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
