--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,3 @@
-body {
-  color: grey;
-  font-size: 100px;
-  font-family: 'Nanum Gothic', sans-serif;
-}
-
 /* ICONS */
 .material-symbols-outlined {
   font-variation-settings:
@@ -11,4 +5,22 @@ body {
   'wght' 400,
   'GRAD' 0,
   'opsz' 24
+}
+
+/* COMMON */
+body {
+  color: #333;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.4;
+  font-family: 'Nanum Gothic', sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+.inner {
+  width: 1100px;
+  margin: 0 auto;
 }
