--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,32 @@ a {
   text-decoration: none;
 }
 
+img {
+  display: block;
+}
+
 .inner {
+  /* 로고 이미지가 수직으로 가운데 정렬을 하기 위해 position 적용 */
+  position: relative;
   width: 1100px;
+  height: 120px;
   margin: 0 auto;
+  background-color: orange;
+}
+
+/* HEADER */
+header {
+  background-color: skyblue;
+}
+
+header .inner .logo {
+  /* 부모 위치를 기준으로 */
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 75px;
+  width: 75px;
 }
