--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,6 @@ img {
   width: 1100px;
   height: 120px;
   margin: 0 auto;
-  background-color: orange;
 }
 
 /* HEADER */
@@ -65,7 +64,6 @@ header .inner .sub-menu {
   position: absolute;
   top: 6px;
   right: 50px;
-  border: 2px solid red;
 }
 header .inner .sub-menu .sub-menu__menu {
   display: flex;
@@ -73,7 +71,25 @@ header .inner .sub-menu .sub-menu__menu {
 }
 header .inner .sub-menu .sub-menu__menu > li {
 }
+
+/* 추가한 코드(풀이코드) ~~> */
+header .inner .sub-menu .sub-menu__menu > li:not(:first-child)::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  display: block;
+  width: 1px;
+  height: 13px;
+  background-color: #e5e5e5;
+}
+/* <~~ 추가한 코드(풀이코드) */
+
 header .inner .sub-menu  .sub-menu__menu > li > a {
+  /* 추가한 코드(풀이코드) */
+  display: block;
+  /* 기존 코드 */
   color: #656565;
   font-size: 13px;
   padding: 10px 15px;
@@ -81,10 +97,13 @@ header .inner .sub-menu  .sub-menu__menu > li > a {
 header .inner .sub-menu .sub-menu__menu > li > a:hover {
   text-decoration: underline;
 }
-header .inner .sub-menu  .sub-menu__menu > li::after {
+/* 기존 코드 ~~> */
+/* header .inner .sub-menu  .sub-menu__menu > li::after {
   content: "|";
   column-rule: #656565;
-}
+} */
+/* <~~ 기존 코드 */
+
 header .inner .sub-menu .search {
   position: relative;
 }
@@ -98,12 +117,18 @@ header .inner .sub-menu .search input {
   outline: none;
   transition: width 0.4s;
 }
+/* 추가한 코드(풀이코드) ~~> */
+header .inner .sub-menu .search input:focus {
+  width: 190px;
+}
+/* <~~ 추가한 코드(풀이코드) */
+
 header .inner .sub-menu .search > .material-symbols-outlined {
   position: absolute;
   margin: auto;
   top: 0;
   bottom: 0;
-  right: 5px;
-  height: 23px;
+  right: 3px;
+  height: 24px;
   font-variation-settings: "FILL" 0, "wght" 700, "GRAD" 0, "opsz" 48;
 }
