--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ header .inner .sub-menu {
   position: absolute;
   top: 6px;
   right: 50px;
+  border: 1px solid blue;
 }
 header .inner .sub-menu .sub-menu__menu {
   display: flex;
@@ -132,6 +133,17 @@ header .inner .sub-menu .search > .material-symbols-outlined {
 }
 
 /* Main menu */
-header .inner .main-menu {}
-header .inner .main-menu .item {}
+header .inner .main-menu {
+  position: absolute;
+  display: flex;
+  right: 0;
+  bottom: 0;
+}
+header .inner .main-menu .item {
+  padding: 10px 20px 34px 20px;
+  font-size: 13px;
+}
+header .inner .main-menu .item:hover {
+  background-color: #2c2a29;
+}
 header .inner .main-menu .item .item__name {}
