--- a/css/main.css
+++ b/css/main.css
@@ -157,3 +157,20 @@ header .inner .main-menu .item .item__name {
   font-size: 13px;
   /* <~~ 추가한 코드(풀이코드) */
 }
+
+header .inner .main-menu .item .item__contents {
+  display: none;
+  position: fixed;
+  top: 120px;
+  left: 0;
+  background-color: orange;
+  width: 100%;
+  height: 100px;
+}
+
+header .inner .main-menu .item:hover .item__contents {
+  display: block;
+}
+
+header .inner .main-menu .item .item__contents__menu {
+}
