--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,6 @@ img {
   /* 로고 이미지가 수직으로 가운데 정렬을 하기 위해 position 적용 */
   position: relative;
   width: 1100px;
-  height: 120px;
   margin: 0 auto;
 }
 
@@ -42,6 +41,10 @@ header {
   border-top: 2px solid black;
   border-bottom:1px solid #eae7e2;
   z-index: 1;
+}
+
+header > .inner {
+  height: 120px;
 }
 
 header .inner .logo {
@@ -163,14 +166,49 @@ header .inner .main-menu .item .item__contents {
   position: fixed;
   top: 120px;
   left: 0;
-  background-color: orange;
   width: 100%;
-  height: 100px;
 }
 
 header .inner .main-menu .item:hover .item__contents {
   display: block;
 }
 
-header .inner .main-menu .item .item__contents__menu {
+header .inner .main-menu .item .item__contents .item__contents__menu {
+  background-color: #2c2a29;
+  padding: 20px 0px;
+}
+
+header .inner .main-menu .item .item__contents .item__contents__menu .inner {
+  display: flex;
+}
+
+header .inner .main-menu .item .item__contents .item__contents__menu .inner > li {
+  width: 200px;
+  padding-right: 20px;
+}
+
+header .inner .main-menu .item .item__contents .item__contents__menu .inner > li > a {
+  /* margin 값을 적용하기 위한 display 속성 지정 */
+  display: block;
+  color: white;
+  font-size: 14px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+
+header .inner .main-menu .item .item__contents .item__contents__menu .inner > li > a:hover {
+  text-decoration: underline;
+}
+
+header .inner .main-menu .item .item__contents .item__contents__menu .inner > li > ul {
+}
+
+header .inner .main-menu .item .item__contents .item__contents__menu .inner > li > ul > li{
+  color: #999;
+  font-size: 12px;
+  margin: 5px 0;
+}
+header .inner .main-menu .item .item__contents .item__contents__menu .inner > li > ul > li:hover{
+  cursor: pointer;
+  text-decoration: underline;
 }
