--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ body {
   font-weight: 400;
   line-height: 1.4;
   font-family: 'Nanum Gothic', sans-serif;
+  height: 3000px;
 }
 
 a {
@@ -220,6 +221,23 @@ header .inner .main-menu .item .item__contents .item__contents__menu .inner > li
 }
 
 /* BADGES */
-header .badges {}
-header .badges .badge {}
-header .badges .badge img {}
+header .badges {
+  /* 헤더를 따라다니기 하기 위해 position 속성을 absolute로 설정 
+  (부모가 fixed이기 때문에 자식 요소의 absolute 속성으로 따라다니기 가능) */
+  position: absolute;
+  top: 150px;
+  /* 고정 위치를 inner 영역 옆으로 설정 */
+  left: calc(1100px + (100vw - 1100px)/2 );
+}
+header .badges .badge {
+  cursor: pointer;
+}
+header .badges .badge img {
+  width: 140px;
+}
+
+@media screen and (max-width:1400px) {
+  header .badges {
+    left: calc(100vw - 150px);
+  }
+}
