--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,27 @@ img {
   margin: 0 auto;
 }
 
+/* BUTTON */
+.btn {
+  display: inline-block;
+  padding: 6px 20px;
+  border: 2px solid currentColor;
+  border-radius: 5px;
+  font-size: 15px;
+}
+
+.btn--light-green {
+  color: #076443;
+  border-color: #076443;
+  transition: 0.6s;
+}
+.btn--light-green:hover {
+  background-color: #076443;
+  border-color: black;
+  color: white;
+  text-decoration: underline;
+}
+
 /* HEADER */
 header {
   /* position:fixed => 스크롤을 따라오도록 */
@@ -240,4 +261,86 @@ header .badges .badge img {
   header .badges {
     left: calc(100vw - 150px);
   }
+}
+
+/* VISUAL */
+.visual {
+  /* 비쥬얼 영역의 모든 아이템들이 해당 영역을 참조해야하므로 relative 적용 */
+  position: relative;
+  background-image: url("../images/visual_bg.jpg");
+  /* height: 646px; => inner 영역으로 이동 */
+  margin-top: 120px;
+  background-position: center;
+  /* 추가한 풀이 코드 */
+  background-repeat: no-repeat;
+}
+
+.visual .inner {
+  /* display: flex; */
+  /* top: 120px; */
+
+  /* 추가한 풀이 코드 */
+  position: relative;
+  height: 646px;
+}
+.visual .inner .slogan {
+  /* 추가한 풀이 코드 */
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 340px;
+  top: 180px;
+  left: -130px;
+}
+.visual .inner .slogan img {
+  /* display: block; */
+  width: 340px;
+  /* top: 180px; */
+  /* left: -130px;  */
+
+  
+}
+.visual .inner .slogan .btn {
+  /* background-color: red; */
+  /* left: 20px; */
+  /* 추가한 풀이 코드 */
+  display: block;
+  margin-top: 60px;
+}
+.visual .inner > img {
+  position: absolute;
+}
+/* 내가 쓴 코드 */
+/* .visual .inner img:nth-child(1){
+  width: 290px;
+  top: 120px;
+  left: 340px;
+}
+.visual .inner img:nth-child(2){
+  width: 310px;
+  top: 208px;
+  left: 538px;
+}
+.visual .inner img:nth-child(3){
+  width: 310px;
+  top: 162px;
+  left: 762px;
+} */
+
+/* 추가한 풀이 코드 */
+.visual .inner .item-1 {
+  width: 290px;
+  top: 120px;
+  left: 340px;
+}
+.visual .inner .item-2 {
+  width: 310px;
+  top: 208px;
+  left: 538px
+}
+.visual .inner .item-3 {
+  width: 310px;
+  top: 162px;
+  left: 762px;
 }
