--- a/css/main.css
+++ b/css/main.css
@@ -347,3 +347,82 @@ header .badges .badge img {
   top: 162px;
   left: 762px;
 }
+
+/* NOTICE */
+.notice {
+  position: relative;
+}
+.notice .notice-line {
+  position: relative;
+  font-weight: 700;
+}
+.notice .notice-line .bg-left {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%; /*bg-left & bg-right가 각각 50%씩 가져야함*/
+  height: 100%;
+  background-color: #111111;
+}
+.notice .notice-line .bg-right {position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%; /*bg-left & bg-right가 각각 50%씩 가져야함*/
+  height: 100%;
+  background-color: #f6f5ef;
+}
+.notice .notice-line .inner {
+  display: flex;
+  height: 62px;
+}
+.notice .notice-line .inner .inner__left {
+  position: relative;
+  display: flex; /*수작 중앙정렬 위해*/
+  align-items: center;
+  width: 60%;
+  height: 100%;
+  background-color: #111111;
+  color: white;
+}
+.notice .notice-line .inner .inner__left h1 {
+  position: absolute;
+  left: 0;
+  font-size: 16px;
+}
+.notice .notice-line .inner .inner__left div {
+  position: absolute;
+  left: 80px;
+  font-size: 14px;
+}
+.notice .notice-line .inner .inner__left a {
+  position: absolute;
+  right: 20px;
+  color: white;
+}
+.notice .notice-line .inner .inner__left a span {
+  font-size: 36px;
+  vertical-align: bottom;  /*중앙정렬 해결*/
+  /* display: block; 미묘하게 중앙 정렬이 맞지 않는 점을 해결 => span 태그라서 vertical-align이 center로 잡혀있기 때문.*/
+}
+.notice .notice-line .inner .inner__right {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 40%;
+  height: 100%;
+  background-color: #f6f5ef;
+}
+.notice .notice-line .inner .inner__right h1 {
+  position: absolute;
+  right: 120px;
+  font-size: 16px;
+}
+.notice .notice-line .inner .inner__right a {
+  position: absolute;
+  right: 20px;
+  color: black;
+}
+.notice .notice-line .inner .inner__right a span {
+  font-size: 36px;
+  display: block; /*중앙정렬 해결*/
+}
