--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,19 @@ img {
   text-decoration: underline;
 }
 
+.btn--brown {
+  border-color: #633510;
+  color: #633510;
+  transition: 0.6s;
+  cursor: pointer;
+}
+
+.btn--brown:hover{
+  background-color: #633510;
+  color: white;
+  text-decoration: underline;
+}
+
 /* HEADER */
 header {
   /* position:fixed => 스크롤을 따라오도록 */
@@ -502,9 +515,36 @@ header .badges .badge img {
 }
 
 /* ELSALVADOR */
-.elsalvador{}
-.elsalvador .inner {}
-.elsalvador .inner .elsalvador__item {}
-.elsalvador .inner .elsalvador__contents{}
-.elsalvador .inner .elsalvador__contents .item-text{}
-.elsalvador .inner .elsalvador__contents .btn.btn--brown{}
+.elsalvador{
+  position: relative;
+  height: 570px;
+  background-image: url("../images/elsalvador_bg.jpg");
+  background-size: cover; /*macOS 기준으로 이미지가 짤리는 점 방지*/
+  background-position: center;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+.elsalvador .inner {
+  display: flex;
+  top: 50px;
+  align-items: center;
+  justify-content: space-around;
+}
+.elsalvador .inner .elsalvador__item {
+  position: relative;
+  display: block;
+  width: 310px;
+  left: 20px;
+  top: 30px;
+}
+.elsalvador .inner .elsalvador__contents{
+  position: relative;
+  display: block;
+  right: 50px;
+}
+.elsalvador .inner .elsalvador__contents .item-text{
+  display: block;
+  margin-bottom: 30px;
+}
+.elsalvador .inner .elsalvador__contents .btn.btn--brown{
+}
