--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,19 @@ img {
   text-decoration: underline;
 }
 
+.btn--white {
+  border-color: #fff;
+  color: #fff;
+  transition: 0.6s;
+  cursor: pointer;
+}
+
+.btn--white:hover {
+  background-color: #fff;
+  color: black;
+  text-decoration: underline;
+}
+
 /* HEADER */
 header {
   /* position:fixed => 스크롤을 따라오도록 */
@@ -715,4 +728,46 @@ header .badges .badge img {
   position: absolute;
   top: 270px;
   left: 260px;
+}
+
+/* FAVORITE */
+.favorite {
+  position: fixed;
+  width: 1900px;
+  height: 800px;
+  z-index: -1;
+  top: 80px;
+  background-image: url("../images/fav_bg.png");
+  background-repeat: no-repeat;
+  background-size: 125%;
+  background-position-y: center;
+}
+.favorite .inner{
+  position: relative;
+  height: 100%;
+}
+.favorite .inner .fav__title {
+  position: absolute;
+  top: 120px;
+  left: 100px;
+  width: 258px;
+  height: 204px;
+}
+.favorite .inner .fav__contents {
+  position: absolute;
+  bottom: 270px;
+  width: 362px;
+  height: 156px;
+}
+.favorite .inner .fav__imgs {
+  position: absolute;
+  top: 170px;
+  left: 440px;
+  width: 912px;
+  height: 588px;
+}
+.favorite .inner .btn.btn--white{
+  position: absolute;
+  bottom: 170px;
+  left: 240px;
 }
