--- a/css/main.css
+++ b/css/main.css
@@ -988,3 +988,19 @@ header .badges .badge img {
   transform: translateX(0);
   transition: transform 3s, background-color 0.6s, color 0.6s, text-decoration 0.6s;
 }
+
+/* FOOTER */
+footer {}
+footer .inner {}
+
+/* FOOTER MENU */
+footer .inner .footer__menu {}
+footer .inner .footer__menu .left {}
+footer .inner .footer__menu .left .menu{}
+footer .inner .footer__menu .left .menu > li{}
+footer .inner .footer__menu .left .menu > li > ul{}
+footer .inner .footer__menu .left .menu > li > ul > a{}
+footer .inner .footer__menu .left .menu > li > ul > li{}
+
+footer .inner .footer__menu .right {}
+footer .inner .footer__menu .right img {}
