--- a/css/main.css
+++ b/css/main.css
@@ -994,9 +994,10 @@ footer {
   /* position: relative; => 이미지 위치를 오른쪽으로 지정하기 위해 쓴 <내코드>*/
   background-color: #2c2a29;
   height: 430px;
+  padding: 30px 0;
 }
 footer .inner {
-  padding: 30px 0;
+  height: 430px;
 }
 
 /* FOOTER MENU */
@@ -1044,21 +1045,30 @@ footer .inner .footer__menu .right img {
   float: right;
 }
 
-/* footer .inner .footer__sub-menu {
+footer .inner .footer__sub-menu {
   position: relative;
-  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+  padding: 40px 50px 10px;
 }
 footer .inner .footer__sub-menu ul {
-
   display: flex;
 }
 footer .inner .footer__sub-menu ul li{
   
 }
 footer .inner .footer__sub-menu ul li a {
-  font-size: 14px;
-  color: white;
+  font-size: 12px;
+  color: #ccc;
+}
+footer .inner .footer__sub-menu ul li:first-child a {
+  color: #00B050;
+}
+footer .inner .footer__sub-menu ul li a:hover {
+  text-decoration: underline;
 }
 footer .inner .footer__sub-menu ul .contour{
-  color: white;
-} */
+  color: #ccc;
+  margin: 0 5px;
+  font-weight: 100;
+}
