--- a/css/main.css
+++ b/css/main.css
@@ -1072,3 +1072,5 @@ footer .inner .footer__sub-menu ul .contour{
   margin: 0 5px;
   font-weight: 100;
 }
+footer .inner .footer__btn {}
+footer .inner .footer__btn .btn.btn-white{}
