--- a/css/main.css
+++ b/css/main.css
@@ -1044,18 +1044,18 @@ footer .inner .footer__menu .right img {
   /* 풀이 코드 : 이미지 위치를 오른쪽으로 지정하기 위함 (position 속성 지정없이 적용 가능) */
   float: right;
 }
-
+/* FOOTER SUB-MENU */
 footer .inner .footer__sub-menu {
   position: relative;
-  display: flex;
-  justify-content: center;
+  /* display: flex;  => 풀이코드: ul 태그에 space-between을 적용하기 위해 해당 코드 주석처리 */
+  /* justify-content: center;  => 풀이코드: ul 태그에 space-between을 적용하기 위해 해당 코드 주석처리 */
   padding: 40px 50px 10px;
 }
 footer .inner .footer__sub-menu ul {
   display: flex;
+  justify-content: space-between; /* => 풀이 코드 : 메뉴 간 간격 적용 */
 }
 footer .inner .footer__sub-menu ul li{
-  
 }
 footer .inner .footer__sub-menu ul li a {
   font-size: 12px;
@@ -1068,9 +1068,9 @@ footer .inner .footer__sub-menu ul li a:hover {
   text-decoration: underline;
 }
 footer .inner .footer__sub-menu ul .contour{
-  color: #ccc;
-  margin: 0 5px;
-  font-weight: 100;
+  color: #999;
+  /* margin: 0 5px;  => 풀이코드: ul 태그에 space-between을 적용하면 해당 속성 지정 필요 X */
+  /* font-weight: 100; => 풀이코드: ul 태그에 space-between을 적용하면 해당 속성 지정 필요 X */
 }
 footer .inner .footer__btn {
   display: flex;
