--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,6 @@
 /* ICONS */
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
 /* COMMON */
@@ -13,7 +9,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.4;
-  font-family: 'Nanum Gothic', sans-serif;
+  font-family: "Nanum Gothic", sans-serif;
   height: 3000px;
 }
 
@@ -64,7 +60,7 @@ img {
   cursor: pointer;
 }
 
-.btn--brown:hover{
+.btn--brown:hover {
   background-color: #633510;
   color: white;
   text-decoration: underline;
@@ -116,7 +112,7 @@ header {
   top: 0;
   background-color: #f6f5ef;
   border-top: 2px solid black;
-  border-bottom:1px solid #eae7e2;
+  border-bottom: 1px solid #eae7e2;
   z-index: 1;
 }
 
@@ -164,7 +160,7 @@ header .inner .sub-menu .sub-menu__menu > li:not(:first-child)::before {
 }
 /* <~~ 추가한 코드(풀이코드) */
 
-header .inner .sub-menu  .sub-menu__menu > li > a {
+header .inner .sub-menu .sub-menu__menu > li > a {
   /* 추가한 코드(풀이코드) */
   display: block;
   /* 기존 코드 */
@@ -224,7 +220,7 @@ header .inner .main-menu .item {
   font-size: 13px; */
   /* <~~ 기존 코드 */
 }
-header .inner .main-menu .item:hover .item__name{
+header .inner .main-menu .item:hover .item__name {
   background-color: #2c2a29;
   color: #669900;
   /* 추가한 코드 */
@@ -265,12 +261,27 @@ header .inner .main-menu .item .item__contents .item__contents__menu .inner {
   display: flex;
 }
 
-header .inner .main-menu .item .item__contents .item__contents__menu .inner > li {
+header
+  .inner
+  .main-menu
+  .item
+  .item__contents
+  .item__contents__menu
+  .inner
+  > li {
   width: 200px;
   padding-right: 20px;
 }
 
-header .inner .main-menu .item .item__contents .item__contents__menu .inner > li > a {
+header
+  .inner
+  .main-menu
+  .item
+  .item__contents
+  .item__contents__menu
+  .inner
+  > li
+  > a {
   /* margin 값을 적용하기 위한 display 속성 지정 */
   display: block;
   color: white;
@@ -279,19 +290,53 @@ header .inner .main-menu .item .item__contents .item__contents__menu .inner > li
   margin-bottom: 15px;
 }
 
-header .inner .main-menu .item .item__contents .item__contents__menu .inner > li > a:hover {
+header
+  .inner
+  .main-menu
+  .item
+  .item__contents
+  .item__contents__menu
+  .inner
+  > li
+  > a:hover {
   text-decoration: underline;
 }
 
-header .inner .main-menu .item .item__contents .item__contents__menu .inner > li > ul {
+header
+  .inner
+  .main-menu
+  .item
+  .item__contents
+  .item__contents__menu
+  .inner
+  > li
+  > ul {
 }
 
-header .inner .main-menu .item .item__contents .item__contents__menu .inner > li > ul > li{
+header
+  .inner
+  .main-menu
+  .item
+  .item__contents
+  .item__contents__menu
+  .inner
+  > li
+  > ul
+  > li {
   color: #999;
   font-size: 12px;
   margin: 5px 0;
 }
-header .inner .main-menu .item .item__contents .item__contents__menu .inner > li > ul > li:hover{
+header
+  .inner
+  .main-menu
+  .item
+  .item__contents
+  .item__contents__menu
+  .inner
+  > li
+  > ul
+  > li:hover {
   cursor: pointer;
   text-decoration: underline;
 }
@@ -303,7 +348,7 @@ header .badges {
   position: absolute;
   top: 150px;
   /* 고정 위치를 inner 영역 옆으로 설정 */
-  left: calc(1100px + (100vw - 1100px)/2 );
+  left: calc(1100px + (100vw - 1100px) / 2);
 }
 header .badges .badge {
   cursor: pointer;
@@ -312,7 +357,7 @@ header .badges .badge img {
   width: 140px;
 }
 
-@media screen and (max-width:1400px) {
+@media screen and (max-width: 1400px) {
   header .badges {
     left: calc(100vw - 150px);
   }
@@ -356,8 +401,6 @@ header .badges .badge img {
   width: 340px;
   /* top: 180px; */
   /* left: -130px;  */
-
-  
 }
 .visual .inner .slogan .btn {
   /* background-color: red; */
@@ -395,7 +438,7 @@ header .badges .badge img {
 .visual .inner .item-2 {
   width: 310px;
   top: 208px;
-  left: 538px
+  left: 538px;
 }
 .visual .inner .item-3 {
   width: 310px;
@@ -419,7 +462,8 @@ header .badges .badge img {
   height: 100%;
   background-color: #111111;
 }
-.notice .notice-line .bg-right {position: absolute;
+.notice .notice-line .bg-right {
+  position: absolute;
   top: 0;
   right: 0;
   width: 50%; /*bg-left & bg-right가 각각 50%씩 가져야함*/
@@ -444,11 +488,18 @@ header .badges .badge img {
   left: 0;
   font-size: 16px;
 }
-.notice .notice-line .inner .inner__left div {
+.notice .notice-line .inner .inner__left .swiper {
   position: absolute;
+  height: 62px; /*notice-line 높이 */
   left: 80px;
   font-size: 14px;
 }
+
+.notice .notice-line .inner .inner__left .swiper .swiper-wrapper .swiper-slide {
+  height: 62px;
+  line-height: 62px;
+}
+
 .notice .notice-line .inner .inner__left a {
   position: absolute;
   right: 20px;
@@ -456,7 +507,7 @@ header .badges .badge img {
 }
 .notice .notice-line .inner .inner__left a span {
   font-size: 36px;
-  vertical-align: bottom;  /*중앙정렬 해결*/
+  vertical-align: bottom; /*중앙정렬 해결*/
   /* display: block; 미묘하게 중앙 정렬이 맞지 않는 점을 해결 => span 태그라서 vertical-align이 center로 잡혀있기 때문.*/
 }
 .notice .notice-line .inner .inner__right {
@@ -521,19 +572,42 @@ header .badges .badge img {
   right: 0;
   bottom: 12px;
 }
-.rewards .inner .rewards__items .rewards__items__register .buttons .btn--register {
+.rewards
+  .inner
+  .rewards__items
+  .rewards__items__register
+  .buttons
+  .btn--register {
   background-color: #00704a;
   border-color: #00704a;
   color: white;
   margin-right: 6px;
   font-weight: 700;
 }
-.rewards .inner .rewards__items .rewards__items__register .buttons .btn--login, .rewards .inner .rewards__items .rewards__items__card .buttons .btn--login {
+.rewards .inner .rewards__items .rewards__items__register .buttons .btn--login,
+.rewards .inner .rewards__items .rewards__items__card .buttons .btn--login {
   border-color: white;
   color: white;
   font-weight: 700;
 }
-.rewards .inner .rewards__items .rewards__items__register .buttons .btn--register:hover, .rewards .inner .rewards__items .rewards__items__register .buttons .btn--login:hover, .rewards .inner .rewards__items .rewards__items__card .buttons .btn--login:hover {
+.rewards
+  .inner
+  .rewards__items
+  .rewards__items__register
+  .buttons
+  .btn--register:hover,
+.rewards
+  .inner
+  .rewards__items
+  .rewards__items__register
+  .buttons
+  .btn--login:hover,
+.rewards
+  .inner
+  .rewards__items
+  .rewards__items__card
+  .buttons
+  .btn--login:hover {
   text-decoration: underline;
 }
 
@@ -553,7 +627,7 @@ header .badges .badge img {
 }
 
 /* ELSALVADOR */
-.elsalvador{
+.elsalvador {
   position: relative;
   height: 570px;
   background-image: url("../images/elsalvador_bg.jpg");
@@ -592,7 +666,7 @@ header .badges .badge img {
   opacity: 0;
   transition: 2.5s;
 }
-.elsalvador .inner .elsalvador__contents{
+.elsalvador .inner .elsalvador__contents {
   /* 내가 쓴 코드 ~~> */
   /* position: relative;
   display: block;
@@ -609,18 +683,18 @@ header .badges .badge img {
   opacity: 0;
   transition: 2.5s;
 }
-.elsalvador:active .inner .elsalvador__item , 
+.elsalvador:active .inner .elsalvador__item,
 .elsalvador:active .inner .elsalvador__contents {
   transform: translateX(0);
   opacity: 1;
 }
-.elsalvador .inner .elsalvador__contents .item-text{
+.elsalvador .inner .elsalvador__contents .item-text {
   /* 내가 쓴 코드 ~~> */
   /* display: block;
   margin-bottom: 30px; */
   /* <~~ 내가 쓴 코드 */
 }
-.elsalvador .inner .elsalvador__contents .btn.btn--brown{
+.elsalvador .inner .elsalvador__contents .btn.btn--brown {
   /* 풀이 코드 */
   margin-top: 40px;
 }
@@ -639,7 +713,7 @@ header .badges .badge img {
   background-image: url("../images/ethiopia_bg.png");
   overflow: hidden;
 }
-.ethiopia::before{
+.ethiopia::before {
   /* 내가 쓴 코드 ~~> */
   /* display: block;
   position: relative;
@@ -711,7 +785,7 @@ header .badges .badge img {
   left: 0;
   top: 120px;
 }
-.ethiopia .inner .ethiopia__item{
+.ethiopia .inner .ethiopia__item {
   /* 내가 쓴 코드 ~~> */
   /* position: absolute;
   display: block;
@@ -724,7 +798,7 @@ header .badges .badge img {
   /* 애니메이션 효과 적용 */
   opacity: 0;
 }
-.ethiopia:active .inner .ethiopia__item{
+.ethiopia:active .inner .ethiopia__item {
   transition: 1.5s;
   transition-delay: 0.8s;
   opacity: 1;
@@ -762,7 +836,7 @@ header .badges .badge img {
   background-size: cover;
   background-attachment: fixed; /*백그라운드가 스크롤에 따라서 뷰포트를 따라오는 것 같이 설정*/
 }
-.favorite .inner{
+.favorite .inner {
   /* 내가 쓴 코드 
   position: relative;
   height: 100%; */
@@ -802,7 +876,7 @@ header .badges .badge img {
   transition: 2.5s;
 }
 
-.favorite:active .inner .fav__title, 
+.favorite:active .inner .fav__title,
 .favorite:active .inner .fav__contents {
   opacity: 1;
   transform: translateX(0);
@@ -819,9 +893,9 @@ header .badges .badge img {
   position: absolute;
   width: 912px;
   top: 100px;
-  right: -260px
+  right: -260px;
 }
-.favorite .inner .btn.btn--white{
+.favorite .inner .btn.btn--white {
   /* 내가 쓴 코드 
   position: absolute;
   bottom: 170px;
@@ -881,12 +955,11 @@ header .badges .badge img {
   /* 애니메이션 효과 적용 */
   opacity: 0;
   transition: 1.5s;
-
 }
 .magazine:active .inner .magazine__imgs {
   opacity: 1;
 }
-.magazine .inner .btn.btn--black{
+.magazine .inner .btn.btn--black {
   /* 내가 쓴 코드 
   position: absolute;
   top: 300px;
@@ -981,12 +1054,13 @@ header .badges .badge img {
 }
 
 .store:active .inner .store__text-1,
-.store:active .inner .store__text-2{
+.store:active .inner .store__text-2 {
   transform: translateX(0);
 }
 .store:active .inner .btn.btn--black {
   transform: translateX(0);
-  transition: transform 3s, background-color 0.6s, color 0.6s, text-decoration 0.6s;
+  transition: transform 3s, background-color 0.6s, color 0.6s,
+    text-decoration 0.6s;
 }
 
 /* FOOTER */
@@ -1009,15 +1083,16 @@ footer .inner .footer__menu .left {
   /* position: absolute; => 이미지 위치를 오른쪽으로 지정하기 위해 쓴 <내코드> */
   width: 90%;
 }
-footer .inner .footer__menu .left .menu{
+footer .inner .footer__menu .left .menu {
   display: flex;
   height: 100%;
 }
-footer .inner .footer__menu .left .menu > li{
+footer .inner .footer__menu .left .menu > li {
   width: 20%;
 }
-footer .inner .footer__menu .left .menu > li > ul{}
-footer .inner .footer__menu .left .menu > li > ul > a{
+footer .inner .footer__menu .left .menu > li > ul {
+}
+footer .inner .footer__menu .left .menu > li > ul > a {
   display: block;
   color: white;
   font-size: 14px;
@@ -1026,7 +1101,7 @@ footer .inner .footer__menu .left .menu > li > ul > a{
 footer .inner .footer__menu .left .menu > li > ul > a:hover {
   text-decoration: underline;
 }
-footer .inner .footer__menu .left .menu > li > ul > li{
+footer .inner .footer__menu .left .menu > li > ul > li {
   color: white;
   font-size: 12px;
   padding: 5px 0;
@@ -1055,19 +1130,19 @@ footer .inner .footer__sub-menu ul {
   display: flex;
   justify-content: space-between; /* => 풀이 코드 : 메뉴 간 간격 적용 */
 }
-footer .inner .footer__sub-menu ul li{
+footer .inner .footer__sub-menu ul li {
 }
 footer .inner .footer__sub-menu ul li a {
   font-size: 12px;
   color: #ccc;
 }
 footer .inner .footer__sub-menu ul li:first-child a {
-  color: #00B050;
+  color: #00b050;
 }
 footer .inner .footer__sub-menu ul li a:hover {
   text-decoration: underline;
 }
-footer .inner .footer__sub-menu ul .contour{
+footer .inner .footer__sub-menu ul .contour {
   color: #999;
   /* margin: 0 5px;  => 풀이코드: ul 태그에 space-between을 적용하면 해당 속성 지정 필요 X */
   /* font-weight: 100; => 풀이코드: ul 태그에 space-between을 적용하면 해당 속성 지정 필요 X */
@@ -1078,14 +1153,14 @@ footer .inner .footer__btn {
   /* justify-content: center; => 풀이코드: flex 지정 없이 버튼의 위치를 지정하는 연습 위해 주석처리 */
   text-align: center; /* => 풀이코드: 버튼 위치 센터로 지정 */
 }
-footer .inner .footer__btn .btn.btn--white{
+footer .inner .footer__btn .btn.btn--white {
   font-size: 12px;
 }
-footer .inner .footer__btn .btn.btn--white:hover{
+footer .inner .footer__btn .btn.btn--white:hover {
   background-color: transparent; /*배경 색을 없애고 투명하게 만들기*/
   color: white;
 }
-footer .inner .footer__btn .btn.btn--white:nth-child(2){
+footer .inner .footer__btn .btn.btn--white:nth-child(2) {
   margin: 0 10px;
 }
 /* FOOTER COPYLIGHT */
@@ -1093,7 +1168,7 @@ footer .inner .footer__copylight {
   /* display: flex; => 풀이코드: text-align:center;로 가운데 정렬을 하기 위해 해당 코드 주석처리*/
   /* justify-content: center; => 풀이코드: text-align:center;로 가운데 정렬을 하기 위해 해당 코드 주석처리 */
   text-align: center; /* => 풀이 코드:중앙 정렬 적용 */
-  margin: 20px 0 0 ;
+  margin: 20px 0 0;
 }
 footer .inner .footer__copylight p {
   color: #999999;
