--- a/css/main.css
+++ b/css/main.css
@@ -396,6 +396,11 @@ header .badges .badge img {
   width: 340px;
   top: 180px;
   left: -130px;
+  opacity: 0;
+}
+.visual.animate .inner .slogan {
+  transition: 0.4s;
+  opacity: 1;
 }
 .visual .inner .slogan img {
   /* display: block; */
@@ -435,16 +440,34 @@ header .badges .badge img {
   width: 290px;
   top: 120px;
   left: 340px;
+  opacity: 0;
+}
+.visual.animate .inner .item-1 {
+  transition: 0.4s;
+  opacity: 1;
+  transition-delay: 0.4s;
 }
 .visual .inner .item-2 {
   width: 310px;
   top: 208px;
   left: 538px;
+  opacity: 0;
+}
+.visual.animate .inner .item-2 {
+  transition: 0.4s;
+  opacity: 1;
+  transition-delay: 0.8s;
 }
 .visual .inner .item-3 {
   width: 310px;
   top: 162px;
   left: 762px;
+  opacity: 0;
+}
+.visual.animate .inner .item-3 {
+  transition: 0.4s;
+  opacity: 1;
+  transition-delay: 1.2s;
 }
 
 /* NOTICE */
@@ -764,8 +787,8 @@ header .badges .badge img {
   opacity: 0;
   transition: 2.5s;
 }
-.elsalvador:active .inner .elsalvador__item,
-.elsalvador:active .inner .elsalvador__contents {
+.elsalvador.animate .inner .elsalvador__item,
+.elsalvador.animate .inner .elsalvador__contents {
   transform: translateX(0);
   opacity: 1;
 }
@@ -840,8 +863,8 @@ header .badges .badge img {
   /* 애니메이션 효과 적용 */
   opacity: 0;
 }
-.ethiopia:active::before,
-.ethiopia:active::after {
+.ethiopia.animate::before,
+.ethiopia.animate::after {
   transition: 1.5s;
   opacity: 1;
 }
@@ -879,7 +902,7 @@ header .badges .badge img {
   /* 애니메이션 효과 적용 */
   opacity: 0;
 }
-.ethiopia:active .inner .ethiopia__item {
+.ethiopia.animate .inner .ethiopia__item {
   transition: 1.5s;
   transition-delay: 0.8s;
   opacity: 1;
@@ -957,8 +980,8 @@ header .badges .badge img {
   transition: 2.5s;
 }
 
-.favorite:active .inner .fav__title,
-.favorite:active .inner .fav__contents {
+.favorite.animate .inner .fav__title,
+.favorite.animate .inner .fav__contents {
   opacity: 1;
   transform: translateX(0);
 }
@@ -1037,7 +1060,7 @@ header .badges .badge img {
   opacity: 0;
   transition: 1.5s;
 }
-.magazine:active .inner .magazine__imgs {
+.magazine.animate .inner .magazine__imgs {
   opacity: 1;
 }
 .magazine .inner .btn.btn--black {
@@ -1127,18 +1150,18 @@ header .badges .badge img {
   transform: translateX(900px);
 }
 
-.store:active .inner .store__img-1,
-.store:active .inner .store__img-2,
-.store:active .inner .store__img-3,
-.store:active .inner .store__img-4 {
+.store.animate .inner .store__img-1,
+.store.animate .inner .store__img-2,
+.store.animate .inner .store__img-3,
+.store.animate .inner .store__img-4 {
   opacity: 1;
 }
 
-.store:active .inner .store__text-1,
-.store:active .inner .store__text-2 {
+.store.animate .inner .store__text-1,
+.store.animate .inner .store__text-2 {
   transform: translateX(0);
 }
-.store:active .inner .btn.btn--black {
+.store.animate .inner .btn.btn--black {
   transform: translateX(0);
   transition: transform 3s, background-color 0.6s, color 0.6s,
     text-decoration 0.6s;
